frames: ignore event outside of frame in get_control

https://bugzilla.gnome.org/show_bug.cgi?id=436416